// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form:initData 1`] = `
<div>
  <form
    class="cxd-Form cxd-Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="cxd-Form-item cxd-Form-item--normal"
      data-amis-name="a"
      data-role="form-item"
    >
      <div
        class="cxd-Form-control cxd-TextControl"
      >
        <div
          class="cxd-TextControl-input"
        >
          <input
            autocomplete="off"
            class=""
            name="a"
            placeholder=""
            size="10"
            type="text"
            value="1"
          />
        </div>
      </div>
    </div>
    <div
      class="cxd-Form-item cxd-Form-item--normal"
      data-amis-name="b"
      data-role="form-item"
    >
      <div
        class="cxd-Form-control cxd-TextControl"
      >
        <div
          class="cxd-TextControl-input"
        >
          <input
            autocomplete="off"
            class=""
            name="b"
            placeholder=""
            size="10"
            type="text"
            value="2"
          />
        </div>
      </div>
    </div>
    <button
      class="cxd-Button cxd-Button--default cxd-Button--size-default"
      type="submit"
    >
      <span>
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Form:initData 2`] = `
{
  "a": "1",
  "b": "2",
}
`;

exports[`Form:initData:remote 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="1"
              />
            </div>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-amis-name="c"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control cxd-TextControl"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="c"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form:initData:remote 2`] = `
{
  "config": {
    "cancelExecutor": [Function],
    "errorMessage": "fetchFailed",
    "onSuccess": [Function],
    "successMessage": undefined,
  },
  "context": {
    "c": "123",
  },
  "method": "get",
  "query": {
    "c": "123",
  },
  "url": "/api/xxx?c=123",
}
`;

exports[`Form:initData:remote 3`] = `
{
  "a": 1,
  "b": 2,
  "c": "123",
}
`;

exports[`Form:initData:super 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <form
            class="cxd-Form cxd-Form--normal"
            novalidate=""
          >
            <input
              style="display: none;"
              type="submit"
            />
            <div
              class="cxd-Form-item cxd-Form-item--normal"
              data-amis-name="a"
              data-role="form-item"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value="1"
                  />
                </div>
              </div>
            </div>
            <div
              class="cxd-Form-item cxd-Form-item--normal"
              data-amis-name="b"
              data-role="form-item"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value="2"
                  />
                </div>
              </div>
            </div>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form:initData:without-super 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <form
            class="cxd-Form cxd-Form--normal"
            novalidate=""
          >
            <input
              style="display: none;"
              type="submit"
            />
            <div
              class="cxd-Form-item cxd-Form-item--normal"
              data-amis-name="a"
              data-role="form-item"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="cxd-Form-item cxd-Form-item--normal"
              data-amis-name="b"
              data-role="form-item"
            >
              <div
                class="cxd-Form-control cxd-TextControl"
              >
                <div
                  class="cxd-TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
              type="submit"
            >
              <span>
                Submit
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form:initData:without-super 2`] = `{}`;
